--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-eframe = "0.33"
-egui_extras = { version = "0.33", features = ["image"] }
-image = "0.25"
-bytemuck = "1.24"
+eframe = "0.33" # UI
+egui_extras = { version = "0.33", features = ["image"] } # UI Image support
+image = "0.25" # Image support
+bytemuck = "1.24" # Cast to bytes
