Add file picker & refactor

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ image = "0.25" # Image support
 bytemuck = "1.24" # Cast to bytes
 smallvec = "1.15" # Vec in stack if len < N
 inkwell = { version = "0.8", features = ["llvm20-1"] }
+native-dialog = "0.9" # Native file picker
+egui-file-dialog = "0.12" # Fallback file picker
+env_logger = "0.11" # Print debug info to terminal
 
 [patch.crates-io]
 # Use features that are not published in crates-io.
