Update build instructions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,19 +9,23 @@ egui_extras = { version = "0.33", features = ["image"] } # UI Image support
 image = "0.25" # Image support
 bytemuck = "1.24" # Cast to bytes
 smallvec = "1.15" # Vec in stack if len < N
-inkwell = { version = "0.8", features = ["llvm20-1"] }
 native-dialog = "0.9" # Native file picker
 egui-file-dialog = "0.12" # Fallback file picker
 env_logger = "0.11" # Print debug info to terminal
+
+inkwell = { version = "0.8", features = ["llvm20-1"], optional = true }
+cranelift = { version = "0.127", optional = true }
 
 [patch.crates-io]
 # Use features that are not published in crates-io.
 glow = { git = "https://github.com/grovesNL/glow", rev = "d645b97" }
 
 [features]
-default = ["llvm_dynamic"]
-llvm_dynamic = ["inkwell/llvm20-1-force-dynamic"]
-llvm_static = ["inkwell/llvm20-1-force-static"]
+default = ["cranelift"]
+
+cranelift = ["dep:cranelift"]
+llvm_dyn = ["inkwell/llvm20-1-force-dynamic"]
+llvm = ["inkwell/llvm20-1-force-static"]
 
 [profile.release]
 lto = true
