--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ native-dialog = "0.9" # Native file picker
 egui-file-dialog = "0.12" # Fallback file picker
 env_logger = "0.11" # Print debug info to terminal
 
+# Compiler Backends
 inkwell = { version = "0.8", features = ["llvm20-1"], optional = true }
 cranelift = { version = "0.127", optional = true }
 cranelift-module = { version = "0.127", optional = true }
